unpackaged/main/default/objects/Contact_TP_Web_Data__c/Contact_TP_Web_Data__c.object-meta.xml
<CustomObject>
    <description>Created by TP Connector</description>
    <label>TP Contact Webcast Data</label>
    <nameField>
        <label>TP Contact Webcast Data</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TP Contact Webcast Datas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>