unpackaged/main/default/objects/Contact_TP_Web_Data__c/fields/CT_TP_Web_Data__c.field-meta.xml
<CustomField>
    <fullName>CT_TP_Web_Data__c</fullName>
    <label>TP Webcasts Detail</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact TP Webcasts Detail</relationshipLabel>
    <relationshipName>CT_TP_Web_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>