unpackaged/main/default/objects/Contact_TP_Web_Data__c/fields/Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_ID__c</fullName>
    <label>Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>