unpackaged/main/default/objects/Contact_TP_Web_Data__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <label>Sponsor</label>
    <length>99</length>
    <type>Text</type>
</CustomField>