unpackaged/main/default/objects/Contact_TP_Web_Data__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The name of the e-book, e-conference, survey, webcast, or whitepaper.</description>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>