unpackaged/main/default/objects/Contact_TP_Web_Data__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eConference</fullName>
            </value>
            <value>
                <fullName>Special Report</fullName>
            </value>
            <value>
                <fullName>Thought Leadership</fullName>
            </value>
            <value>
                <fullName>Webcast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>